--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,14 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class="d-flex flex-column">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <%= render 'shared/nav' %>
+          <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
