--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,23 @@
 <h1>Posts</h1>
+<div class="table-responsive">
+  <table class="table table-hover table-striped">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Date</th>
+        <th scope="col">User</th>
+        <th scope="col">Rationale</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @posts.each do |post| %>
+        <tr>
+          <th scope="row"><%= post.id %></th>
+          <td><%= post.date %></td>
+          <td><%= post.user.first_name %></td>
+          <td><%= truncate(post.rationale,20) %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
