--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,14 +10,7 @@
       </tr>
     </thead>
     <tbody>
-      <% @posts.each do |post| %>
-        <tr>
-          <th scope="row"><%= post.id %></th>
-          <td><%= post.date %></td>
-          <td><%= post.user.first_name %></td>
-          <td><%= truncate(post.rationale,20) %></td>
-        </tr>
-      <% end %>
+      <%= render @posts %>
     </tbody>
   </table>
 </div>
