--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,5 +3,8 @@
   <td><%= post.date %></td>
   <td><%= post.user.full_name %></td>
   <td><%= truncate(post.rationale) %></td>
-  <td><%= link_to 'Edit', edit_post_path(post),id: "edit_#{post.id}" %></td>
+  <td>
+    <%= link_to 'Edit', edit_post_path(post),id: "edit_#{post.id}" %>
+    <%= link_to 'Destroy', destroy_post_path(post), method: :delete, id: "destroy_#{post.id}_from_index", data: {confirm: "Are you sure?"} %>
+  </td>
 </tr>
