--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,6 +5,6 @@
   <td><%= truncate(post.rationale) %></td>
   <td>
     <%= link_to 'Edit', edit_post_path(post),id: "edit_#{post.id}" %>
-    <%= link_to 'Destroy', posts_path(post), method: :delete, id: "destroy_#{post.id}_from_index", data: {confirm: "Are you sure?"} %>
+    <%= link_to 'Destroy', post_path(post), method: :delete, id: "destroy_#{post.id}_from_index", data: {confirm: "Are you sure?"} %>
   </td>
 </tr>
