--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -8,6 +8,15 @@
     <%= f.label :rationale %>
     <%= f.text_area :rationale, class: "form-control" %>
   </div>
+  <div class="form-group">
+    <%= f.radio_button :status, 'submitted' %>
+    <%= f.label :status, 'Submitted', class: 'form-check-label' %>
+    <%= f.radio_button :status, 'approved' %>
+    <%= f.label :status, 'Approved', class: 'form-check-label' %>
+    <%= f.radio_button :status, 'rejected' %>
+    <%= f.label :status, 'Rejected', class: 'form-check-label' %>
+
+  </div>
 
   <%= f.submit 'Save', class: "btn btn-primary" %>
 <% end %>
