--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,19 +4,13 @@
     <%= f.label :date %>
     <%= f.date_field :date, class: "form-control" %>
   </div>
+
   <div class="form-group">
     <%= f.label :rationale %>
     <%= f.text_area :rationale, class: "form-control" %>
   </div>
-  <div class="form-group">
-    <%= f.radio_button :status, 'submitted' %>
-    <%= f.label :status, 'Submitted', class: 'form-check-label' %>
-    <%= f.radio_button :status, 'approved' %>
-    <%= f.label :status, 'Approved', class: 'form-check-label' %>
-    <%= f.radio_button :status, 'rejected' %>
-    <%= f.label :status, 'Rejected', class: 'form-check-label' %>
 
-  </div>
+  <%= render partial: 'status', locals: {f: f} if current_user.type == "AdminUser" %> 
 
   <%= f.submit 'Save', class: "btn btn-primary" %>
 <% end %>
