Added link to admin_dashboard for admins

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,6 +1,7 @@
 <div class="logo">
   <h1>Time Tracker</h1>
 </div>
+<!-- TODO -->
 <% if current_user %>
   <ul class="custom-nav nav nav-tabs">
     <li class="nav-item">
@@ -13,11 +14,17 @@
       <%= link_to 'Add New Entry', new_post_path, class: "nav-link #{active?(new_post_path)}", id: 'new_post_from_nav' %>
     </li>
     <li class="nav-item dropdown ml-md-auto">
-       <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Dropdown link</a>
+      <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown">Account</a>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-        <div class="dropdown-divider"></div> 
+        <!-- TODO -->
+        <% if current_user.type == "AdminUser" %>
+          <%= link_to "Admin Dashboard", admin_root_path %>
+          <div class="dropdown-divider"></div> 
+        <% end %>
+        <!-- TODO -->
          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
       </div>
     </li>
   </ul>
 <% end %>
+<!-- TODO -->
